--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .makeDancerButton{
   padding:5px 12px;
   float:right;
 }
@@ -24,4 +24,8 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+
+.rainbowDancer {
+
 }
