--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton, .makeDancerButton{
+.title, .addDancerButton, .makeDancerButton, .lineUpButton {
   padding:5px 12px;
   float:right;
 }
